--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           </a>
         </div>
         <div class="col-xs-3 col-md-2">
-          <a href="https://d2r2:5001/webman/3rdparty/SurveillanceStation/" class="thumbnail">
+          <a href="https://darkvador:5001/webman/3rdparty/SurveillanceStation/" class="thumbnail">
             <img src="images/surveillance.png" height="128" alt="...">
             <div class="caption">
             <h3><center>Surveillance</center></h3>
@@ -121,7 +121,7 @@
         </div>
 
         <div class="col-xs-3 col-md-2">
-          <a href="http://watchdog:8080/_cycle?duration=10" class="thumbnail">
+          <a href="http://home:8080/_cycle?duration=10" class="thumbnail">
             <img src="images/gigue.png" height="128" alt="...">
             <div class="caption">
             <h3><center>Gigue</center></h3>
