--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           </a>
         </div>
         <div class="col-xs-3 col-md-2">
-          <a href="http://picasso:3000/" class="thumbnail">
+          <a href="http://home:3000/" class="thumbnail">
             <img src="images/grafana.png" height="128" alt="...">
             <div class="caption">
             <h3><center>Grafana</center></h3>
