--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
           </a>
         </div>
         <div class="col-xs-3 col-md-2">
-          <a href="https://home:4000/" class="thumbnail">
+          <a href="http://docker.home.lan/" class="thumbnail">
             <img src="images/docker.png" height="128" alt="...">
             <div class="caption">
-            <h3><center>cAdvisor</center></h3>
+            <h3><center>Docker</center></h3>
           </div>   
           </a>
         </div>
@@ -56,7 +56,7 @@
           </a>
         </div>
         <div class="col-xs-3 col-md-2">
-          <a href="http://home:3000/" class="thumbnail">
+          <a href="http://picasso.home.lan/" class="thumbnail">
             <img src="images/grafana.png" height="128" alt="...">
             <div class="caption">
             <h3><center>Grafana</center></h3>
@@ -121,7 +121,7 @@
         </div>
 
         <div class="col-xs-3 col-md-2">
-          <a href="http://home:8080/_cycle?duration=10" class="thumbnail">
+          <a href="http://gigue.home.lan/_cycle?duration=10" class="thumbnail">
             <img src="images/gigue.png" height="128" alt="...">
             <div class="caption">
             <h3><center>Gigue</center></h3>
