updated nestor icon and urls

--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
           </a>
         </div>
         <div class="col-xs-3 col-md-2">
-          <a href="http://peon:1880/" class="thumbnail">
-            <img src="images/peon.png" height="128" alt="...">
+          <a href="http://nestor.home.lan/" class="thumbnail">
+            <img src="images/nestor.jpg" height="128" alt="...">
             <div class="caption">
             <h3><center>Peon</center></h3>
           </div>   
@@ -96,7 +96,7 @@
           </a>
         </div>
          <div class="col-xs-3 col-md-2">
-          <a href="http://192.168.1.29:1880/salon?action=On" class="thumbnail">
+          <a href="http://nestor.home.lan/salon?action=On" class="thumbnail">
             <img src="images/lumiere.png" height="128" alt="...">
             <div class="caption">
             <h3><center>Salon</center></h3>
@@ -111,15 +111,6 @@
           </div>   
           </a>
         </div>
-	<div class="col-xs-3 col-md-2">
-          <a href="http://watchdog/godillot/index.html" class="thumbnail">
-            <img src="images/godillot.png" height="128" alt="...">
-            <div class="caption">
-            <h3><center>Godillot</center></h3>
-          </div>   
-          </a>
-        </div>
-
         <div class="col-xs-3 col-md-2">
           <a href="http://gigue.home.lan/_cycle?duration=10" class="thumbnail">
             <img src="images/gigue.png" height="128" alt="...">
