updated nestor txt

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           <a href="http://nestor.home.lan/" class="thumbnail">
             <img src="images/nestor.jpg" height="128" alt="...">
             <div class="caption">
-            <h3><center>Peon</center></h3>
+            <h3><center>Nestor</center></h3>
           </div>   
           </a>
         </div>
