--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <div class="row">
         <div class="col-xs-3 col-md-2">
           <a href="http://cerbere" class="thumbnail">
-            <img src="images/cerbere.png" height="128" alt="...">
+            <img src="images/cerbere.gif" height="128" alt="...">
             <div class="caption">
               <h3><center>Cerbère</center></h3>
           </div>  
@@ -33,7 +33,7 @@
         </div>
         <div class="col-xs-3 col-md-2">
           <a href="https://rpm.newrelic.com/accounts/882160/servers" class="thumbnail">
-            <img src="images/newrelic.png" height="128" alt="...">
+            <img src="images/newrelic.jpg" height="128" alt="...">
             <div class="caption">
               <h3><center>Supervision</center></h3>
           </div>  
@@ -81,31 +81,23 @@
         </div>
         <div class="col-xs-3 col-md-2">
           <a href="http://obelix:8083/" class="thumbnail">
-            <img src="images/obelix.png" height="128" alt="...">
+            <img src="images/obelix.jpg" height="128" alt="...">
             <div class="caption">
             <h3><center>Obelix</center></h3>
           </div>   
           </a>
         </div>
          <div class="col-xs-3 col-md-2">
-          <a href="http://d2r2" class="thumbnail">
-            <img src="images/d2r2.png" height="128" alt="...">
-            <div class="caption">
-            <h3><center>d2r2</center></h3>
-          </div>   
-          </a>
-        </div>
-         <div class="col-xs-3 col-md-2">
           <a href="http://nestor.home.lan/salon?action=On" class="thumbnail">
-            <img src="images/lumiere.png" height="128" alt="...">
+            <img src="images/lumiere.jpg" height="128" alt="...">
             <div class="caption">
-            <h3><center>Salon</center></h3>
+            <h3><center>Lumière</center></h3>
           </div>   
           </a>
         </div>         
  	<div class="col-xs-3 col-md-2">
           <a href="http://darkvador/" class="thumbnail">
-            <img src="images/filezilla.png" height="128" alt="...">
+            <img src="images/darkvador.png" height="128" alt="...">
             <div class="caption">
             <h3><center>Darkvador</center></h3>
           </div>   
