--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           </a>
         </div>
         <div class="col-xs-3 col-md-2">
-          <a href="https://rpm.newrelic.com/accounts/882160/servers" class="thumbnail">
+          <a href="http://supervision.zeneffy.fr" class="thumbnail">
             <img src="images/newrelic.jpg" height="128" alt="...">
             <div class="caption">
               <h3><center>Supervision</center></h3>
