--- a/index.html
+++ b/index.html
@@ -32,19 +32,11 @@
           </a>
         </div>
         <div class="col-xs-3 col-md-2">
-          <a href="http://supervision.zeneffy.fr" class="thumbnail">
-            <img src="images/newrelic.jpg" height="128" alt="...">
+          <a href="http://centurion" class="thumbnail">
+            <img src="images/centurion.png" height="128" alt="...">
             <div class="caption">
-              <h3><center>Supervision</center></h3>
+              <h3><center>Centurion</center></h3>
           </div>  
-          </a>
-        </div>
-        <div class="col-xs-3 col-md-2">
-          <a href="http://docker.home.lan/" class="thumbnail">
-            <img src="images/docker.png" height="128" alt="...">
-            <div class="caption">
-            <h3><center>Docker</center></h3>
-          </div>   
           </a>
         </div>
         <div class="col-xs-3 col-md-2">
