updated index.html and nginx

--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
     <div class="container">
       <div class="row">
         <div class="col-xs-3 col-md-2">
-          <a href="http://cerbere" class="thumbnail">
+          <a href="http://hammer.igny" class="thumbnail">
             <img src="images/cerbere.gif" height="128" alt="...">
             <div class="caption">
-              <h3><center>Cerbère</center></h3>
+              <h3><center>Hammer</center></h3>
           </div>  
           </a>
         </div>
         <div class="col-xs-3 col-md-2">
-          <a href="http://centurion" class="thumbnail">
+          <a href="http://centurion.igny" class="thumbnail">
             <img src="images/centurion.png" height="128" alt="...">
             <div class="caption">
               <h3><center>Centurion</center></h3>
@@ -40,7 +40,7 @@
           </a>
         </div>
         <div class="col-xs-3 col-md-2">
-          <a href="http://domify/" class="thumbnail">
+          <a href="http://domify.igny/" class="thumbnail">
             <img src="images/home.png" height="128" alt="...">
             <div class="caption">
             <h3><center>Domify</center></h3>
@@ -48,7 +48,7 @@
           </a>
         </div>
         <div class="col-xs-3 col-md-2">
-          <a href="http://picasso.home.lan/" class="thumbnail">
+          <a href="http://picasso.igny/" class="thumbnail">
             <img src="images/grafana.png" height="128" alt="...">
             <div class="caption">
             <h3><center>Grafana</center></h3>
@@ -56,7 +56,7 @@
           </a>
         </div>
         <div class="col-xs-3 col-md-2">
-          <a href="http://nestor.home.lan/" class="thumbnail">
+          <a href="http://nestor.igny/" class="thumbnail">
             <img src="images/nestor.jpg" height="128" alt="...">
             <div class="caption">
             <h3><center>Nestor</center></h3>
@@ -64,7 +64,7 @@
           </a>
         </div>
         <div class="col-xs-3 col-md-2">
-          <a href="https://darkvador:5001/webman/3rdparty/SurveillanceStation/" class="thumbnail">
+          <a href="https://darkvador.igny:5001/webman/3rdparty/SurveillanceStation/" class="thumbnail">
             <img src="images/surveillance.png" height="128" alt="...">
             <div class="caption">
             <h3><center>Surveillance</center></h3>
@@ -72,7 +72,7 @@
           </a>
         </div>
         <div class="col-xs-3 col-md-2">
-          <a href="http://obelix:8083/" class="thumbnail">
+          <a href="http://obelix.igny:8083/" class="thumbnail">
             <img src="images/obelix.jpg" height="128" alt="...">
             <div class="caption">
             <h3><center>Obelix</center></h3>
@@ -80,7 +80,7 @@
           </a>
         </div>
          <div class="col-xs-3 col-md-2">
-          <a href="http://nestor.home.lan/salon?action=On" class="thumbnail">
+          <a href="http://nestor.igny/salon?action=On" class="thumbnail">
             <img src="images/lumiere.jpg" height="128" alt="...">
             <div class="caption">
             <h3><center>Lumière</center></h3>
@@ -88,7 +88,7 @@
           </a>
         </div>         
  	<div class="col-xs-3 col-md-2">
-          <a href="http://darkvador/" class="thumbnail">
+          <a href="http://darkvador.igny/" class="thumbnail">
             <img src="images/darkvador.png" height="128" alt="...">
             <div class="caption">
             <h3><center>Darkvador</center></h3>
@@ -96,7 +96,7 @@
           </a>
         </div>
         <div class="col-xs-3 col-md-2">
-          <a href="http://gigue.home.lan/_cycle?duration=10" class="thumbnail">
+          <a href="http://gigue.igny/_cycle?duration=10" class="thumbnail">
             <img src="images/gigue.png" height="128" alt="...">
             <div class="caption">
             <h3><center>Gigue</center></h3>
