--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Home</title>
+    <title>Home.igny</title>
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -19,15 +19,24 @@
   </head>
   <body>
     <div class="container">
-    <h1><center>Home</center></h1>
+    <h1><center>Home.igny - là où tout commence</center></h1>
     </div>
     <div class="container">
       <div class="row">
         <div class="col-xs-3 col-md-2">
           <a href="http://hammer.igny" class="thumbnail">
-            <img src="images/cerbere.gif" height="128" alt="...">
+            <img src="images/hammer.png" height="128" alt="...">
             <div class="caption">
               <h3><center>Hammer</center></h3>
+          </div>  
+          </a>
+        </div>
+        <div class="row">
+        <div class="col-xs-3 col-md-2">
+          <a href="http://cerbere.igny" class="thumbnail">
+            <img src="images/cerbere.gif" height="128" alt="...">
+            <div class="caption">
+              <h3><center>Cerbère</center></h3>
           </div>  
           </a>
         </div>
